tests/cases/fail/null_member_access.cs
class Person {
    int age;
}

class Program {
    static void Main() {
        Person p = null;
        Console.WriteLine(p.age);
    }
}
